--- Auto-Git Commit ---

--- a/DOM/index.html
+++ b/DOM/index.html
@@ -9,8 +9,18 @@
 </head>
 
 <body>
-
-    <script src="./app.js"></script>
+    <header>
+        <h1 id="mian-title">Dive into the Dom</h1>
+    </header>
+    <!-- <main>
+        <p>there's a olot to it!</p>
+        <script src="./app.js"></script>
+    </main> -->
+    <ul>
+        <li class="">Item one</li>
+        <li class="list-item">Item two</li>
+        <li class="list-item">Item three</li>
+    </ul>
 </body>
 
 </html>
