--- Auto-Git Commit ---

--- a/moshCourse/index.html
+++ b/moshCourse/index.html
@@ -12,6 +12,7 @@
     <h1>Hello world</h1>
 
     <script src="./js/app.js"></script>
+    <script src="./js/objects.js"></script>
 </body>
 
 </html>
